# autocmake

./: .default.nix  .envrc  .gitignore  .travis.yml  AUTHORS.md  LICENSE  Pipfile  README.md  appveyor.yml  bootstrap.py  requirements.txt  update.py
autocmake/: __init__.py  configure.py  extract.py  generate.py  http.py  interpolate.py  parse_rst.py  parse_yaml.py
compiler_flags/: Clang.C.cmake  Clang.CXX.cmake  GNU.C.cmake  GNU.CXX.cmake  GNU.Fortran.cmake  Intel.C.cmake  Intel.Fortran.cmake  PGI.C.cmake  PGI.CXX.cmake  PGI.Fortran.cmake  XL.C.cmake  XL.CXX.cmake
compilers/: Clang.C.cmake  Clang.CXX.cmake  GNU.C.cmake  GNU.CXX.cmake  GNU.Fortran.cmake  Intel.C.cmake  Intel.Fortran.cmake  PGI.C.cmake  PGI.CXX.cmake  PGI.Fortran.cmake  XL.C.cmake  XL.CXX.cmake  XL.Fortran.cmake
doc/: Makefile  about.rst  autocmake-users-faq.rst  bootstrap.rst  cmakelists.rst  conf.py  contributing.rst  customization.rst  customizing-modules.rst  doc.rst  documentation.rst  extract_rst.py  index.rst  new-project.rst  update.rst  updating-modules.rst
doc/contributors/: doc.rst  guidelines.rst  testing.rst
doc/developers/: bootstrap.rst  configuration.rst  customizing-modules.rst  example.rst  faq.rst  interpolation.rst  new-project.rst  updating-modules.rst
doc/general/: about.rst  help.rst  requirements.rst
doc/users/: faq.rst
example/: autocmake.cfg  autocmake.yml  cframe.cfg
lib/: config.py
modules/: CheckFortranSourceCompiles.cmake  UseBuildInfo.cmake  UseMPI.cmake  UseMathLibs.cmake  UseOMP.cmake  UseStaticLinking.cmake  attach-license-header.py  build_info.cmake  cblas.cmake  cc.cmake  ccache.cmake  code_coverage.cmake  custom_color_messages.cmake  cxx.cmake  fc.cmake  fc_optional.cmake  googletest.cmake  int64.cmake  lapacke.cmake  math_libs.cmake  mpi.cmake  omp-flags.cmake  omp.cmake  preprocessing.cmake  profile.cmake  python.cmake  python_interpreter.cmake  python_libs.cmake  safeguards.cmake  save_flags.cmake  static_linking.cmake  version.cmake
modules/boost/: boost.cmake  boost_build.cmake  boost_cleanup.cmake  boost_configure.cmake  boost_headers.cmake  boost_install.cmake  boost_unpack.cmake  boost_userconfig.cmake
modules/build_info/: build_info.cmake  build_info.h.in
modules/detect/: detect_include_files.cmake  detect_libraries.cmake
modules/find/: find_include_files.cmake  find_libraries.cmake
modules/git_info/: git_info.cmake  git_info.h.in  git_info_sub.cmake
modules/math/: accelerate.cmake  acml.cmake  atlas.cmake  blas.cmake  cblas.cmake  goto.cmake  lapack.cmake  lapacke.cmake  openblas.cmake
test/: test.py  test_openblas.py
test/boost_header_only/cmake/: autocmake.cfg  autocmake.yml
test/boost_header_only/cmake/custom/: boost_version-components.cmake
test/boost_header_only/src/: CMakeLists.txt  example.cpp
test/boost_libs/cmake/: autocmake.cfg  autocmake.yml
test/boost_libs/cmake/custom/: boost_version-components.cmake
test/boost_libs/src/: CMakeLists.txt  example.cpp
test/boost_mpi_libs/cmake/: autocmake.cfg
test/boost_mpi_libs/src/: CMakeLists.txt  example.cpp
test/boost_python_libs/cmake/: autocmake.cfg
test/boost_python_libs/src/: CMakeLists.txt  example.cpp
test/cc_cblas/cmake/: autocmake.cfg
test/cc_cblas/src/: CMakeLists.txt  example.c
test/cc_clapack/cmake/: autocmake.cfg
test/cc_clapack/src/: CMakeLists.txt  example.c
test/cc_lapacke/cmake/: autocmake.cfg
test/cc_lapacke/src/: example.c
test/cxx/cmake/: autocmake.cfg  autocmake.yml
test/cxx_accelerate/cmake/: autocmake.cfg  autocmake.yml
test/cxx_accelerate/src/: CMakeLists.txt  example.cpp
test/cxx_auto/cmake/: autocmake.cfg
test/cxx_cblas/cmake/: autocmake.cfg  autocmake.yml
test/cxx_cblas/src/: CMakeLists.txt  example.cpp  example.cxx
test/cxx_custom/cmake/: autocmake.cfg
test/cxx_custom/src/: example.cpp
test/cxx_lapacke/cmake/: autocmake.cfg
test/cxx_lapacke/src/: CMakeLists.txt  example.cpp
test/extra_cmake_options/cmake/: autocmake.cfg  autocmake.yml
test/extra_cmake_options/src/: CMakeLists.txt
test/fc/cmake/: autocmake.cfg  autocmake.yml
test/fc/src/: CMakeLists.txt  example.f90  module.f90
test/fc_blas/cmake/: autocmake.cfg  autocmake.yml
test/fc_blas/src/: CMakeLists.txt  example.f90
test/fc_build_info/cmake/: autocmake.cfg
test/fc_build_info/src/: CMakeLists.txt  example.F90
test/fc_git_info/cmake/: autocmake.cfg  autocmake.yml
test/fc_git_info/src/: CMakeLists.txt  example.F90
test/fc_gitinfo/cmake/: autocmake.cfg
test/fc_gitinfo/src/: CMakeLists.txt  example.F90
test/fc_int64/cmake/: autocmake.cfg  autocmake.yml
test/fc_int64/src/: example.f90
test/fc_lapack/cmake/: autocmake.cfg  autocmake.yml
test/fc_lapack/src/: CMakeLists.txt  example.F90  example.f90
test/fc_mpi/cmake/: autocmake.cfg
test/fc_mpi/src/: CMakeLists.txt  example.F90  example.f90
test/fc_omp/cmake/: autocmake.cfg  autocmake.yml
test/fc_omp/src/: CMakeLists.txt  example.f90
test/fc_openblas/cmake/: autocmake.cfg  autocmake.yml
test/fc_openblas/src/: CMakeLists.txt  example.f90
test/fortran/cmake/: autocmake.cfg
test/fortran/src/: example.f90
test/python_interpreter/cmake/: autocmake.cfg  autocmake.yml
test/python_interpreter_custom/cmake/: autocmake.cfg  autocmake.yml
test/python_libs/cmake/: autocmake.cfg  autocmake.yml
test/python_libs/src/: CMakeLists.txt  example.cpp
test/python_libs_custom/cmake/: autocmake.cfg  autocmake.yml
test/python_libs_custom/src/: CMakeLists.txt  example.cpp
(+3 files in other folders)
