if (ENABLE_BLAS)
if(BLAS_FOUND)
    add_executable(example example.f90)
    target_link_libraries(example ${BLAS_LIBRARIES})
else()
    message(FATAL_ERROR "BLAS library not found")
endif()
endif()

if (ENABLE_OPENBLAS)
if(OpenBLAS_FOUND)
    add_executable(example example.f90)
    target_link_libraries(example ${OpenBLAS_LIB})
else()
    message(FATAL_ERROR "OpenBLAS library not found")
endif()
endif()
